# rust-gpu-nixos-example

./: Cargo.toml  flake.nix  rust-toolchain.toml
runner/: Cargo.toml
runner/src/: main.rs
shaders/shader/: Cargo.toml
shaders/shader/src/: lib.rs
